# limos

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  go.mod  main.go  meson.build
.github/workflows/: ci.yaml
include/: channel.h  php_wrapper.h  worker.h
pkg/php/: init.go  php_wrapper.c  php_wrapper.go  php_wrapper.h  php_wrapper_test.go
samples/: hello_world.php
src/: channel.c  main.c  php_wrapper.c  worker.c
tests/: test_channel.c  test_worker.c
